Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: 6.3.0 RC
-
Fix Version/s: 6.3.1, 6.4.0 Beta1
-
Component/s: Build tools: qdoc
-
Labels:None
-
Commits:106a6e613c (qt/qttools/dev) 48351cd998 (qt/qttools/6.3) 48351cd998 (qt/tqtc-qttools/6.3) 106a6e613c (qt/tqtc-qttools/dev) 48351cd998 (qt/qttools/6.3.1) 48351cd998 (qt/tqtc-qttools/6.3.1) 106a6e613c (qt/qttools/6.4)
-
Sprint:DaVinci sprint 53, DaVinci sprint 54
Description
It seems qdoc is indiscriminately linking to a central module page in the breadcrump menu for a QML type, even if there are more specific \qmlmodule pages available.
Example: https://doc.qt.io/qt-6/qml-qtquick3d-effects-blur.html
Clicking on "QML Types" in the breadcrump menu brings up https://doc.qt.io/qt-6/qtquick3d-qmlmodule.html . Anyhow, the more specific page would be https://doc.qt.io/qt-6/qtquick3d-effects-qmlmodule.html
Attachments
Issue Links
- relates to
-
QTBUG-102385 Improve documentation for QML Effect types
-
- Reported
-
For Gerrit Dashboard: QTBUG-102387 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
408100,1 | qdoc: Improve generated navigation bar for C++ and QML types | tqtc/lts-6.2 | qt/tqtc-qttools | Status: NEW | 0 | 0 |